@@ -1,3 +1,4 @@
+    ADDED: synchronizer: double click on a file calls the diff utility (kompare)
     ADDED: terminal emulator: Ctrl+Enter,Ctrl+Shift+Enter paste the filename
     ADDED: atomic extensions (see CVSNEWS)
     ADDED: archive packing / unpacking are now in the background
